		project.

	v1.1 - 06/11/2014

		Implemented the Server class, adding it's functionality. In terms of
		breaking up the previous class' main method into smaller pieces, little
		was achieved since I felt that after removing some print statements used
		for checking, the code was small enough to not require further breaking 
		down. This will be reassessed during multithreading part of the
		exercise.
		
	v1.2 - 08/11/2014
	
		Implemented the Client class, and now the system is capable of
		communicating between the client and server. Basic testing has shown me
		than this is working, but I will be doing some more thorough testing
		in the future as well, since this is still merely the single threaded
		version.
		
	v1.3 - 10/11/2014
	
		Generated Javadoc for the project, although since Client and Server are
		primarily private methods, they have not been included, although this is
		not a major issue. I have tweaked Client and Server to have fields that
		make some sense, mainly being the client input and the created message
		object.

================================================================================

Version 2:	MultiThreaded Client/Server

Commenced:	11/11/2014
Finished:	

--------------------------------------------------------------------------------

	v2.0 - 11/11/2014
	
		Created ServerDriver class, which contains the main method for dealing
		with the server. This was done in preparation for implementing
		multithreading within the project.
		
	v2.1 - 18/11/2014
	
		Created an initial thread pool in the project, with the ServerDriver
		class containing and handling the pool. The Server class contains the
		execution of the task. Further testing is required however.
		
	v2.2 - 18/11/2014
	
		Thread pool seems to work fine after testing, so far minor tweaks have
		been done across the board, ensuring documentation and such is accurate.
		This feels like a project that can now be submitted..