@@ -8,7 +8,7 @@ import org.junit.Test;
  * calling their respective getters display an accurate result.
  * 
  * @author Aidan O'Grady
- * @version 2.1
+ * @version 2.2
  * @since 0.3
  *
  */
